--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -23,7 +23,17 @@
 .App-link {
   color: #61dafb;
 }
-
+#root{
+  height: 100vh;
+}
+.App{
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+.mainCon{
+  flex-grow: 1;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
