--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -2,3 +2,7 @@
     font-weight: bold;
     box-shadow: 10px 10px 10px 10px rgba(0,0,0,0.253)!important;
 }
+
+.info-card{
+    background-color: rosybrown;
+}
