--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -1,9 +1,10 @@
 .App {
   text-align: center;
   background-color: steelblue;
-  background-image: url(https://background-tiles.com/overview/blue/patterns/large/1058.png);
-  opacity: .95;
+  background-image: url(https://wallpapercave.com/wp/wp4831635.jpg);
+  background-blend-mode: .95;
   background-attachment: fixed;
+  background-size: cover;
 }
 
 .App-logo {
