changed color on dashboard, get 2 post  api.js

--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -46,3 +46,16 @@
     transform: rotate(360deg);
   }
 }
+
+.income {
+  color:whitesmoke;
+  background-color: purple;
+}
+
+.expense{
+  color:whitesmoke;
+  background-color: green;
+}
+
+
+
